# vdr_pi

./: .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.old  Frontend1.md  INSTALL.md  PI_MANAGER_FrontEnd_Option_1.md  PI_MANAGER_Frontend1.md  PI_Manager_FrontEnd_Option_1.txt  Plugin.cmake  README  README.md  VDR-plugin.xml.in  VERSION.cmake  appveyor.yml  bld.bat  config.h.in  upload-conf.sh.in
.circleci/: config.yml  config.yml.bak
build-deps/: control  control-raspbian  rgleason.enc  rgleason.pub
buildwin/: ShipDriver.clone.bat  ShipDriver.without.clone.bat  minimal-path.bat  vdr-no-clne.bat  vdr-without-clone.bat  vdr.without.clone.bat  win_deps.bat
buildwin/NSIS_Unicode/Include/: Langstrings_CZECH.nsh  Langstrings_FRENCH.nsh  Langstrings_GERMAN.nsh  Langstrings_ITALIAN.nsh  Langstrings_RUSSIAN.nsh  Langstrings_SPANISH.nsh
buildwin/NSIS_Unicode/Language files/: Langstrings_CZECH.nsh.in  Langstrings_FRENCH.nsh.in  Langstrings_GERMAN.nsh.in  Langstrings_RUSSIAN.nsh.in  Langstrings_SPANISH.nsh.in  Langstrings_TURKISH.nsh.in  UAC.nsh
ci/: appveyor-upload.sh  circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-trusty.sh  circleci-upload-flatpak.sh  circleci-upload.sh  commons.sh  control  git-push.sh  travis-build-raspbian-armhf.sh  travis-build-ubuntu-arm64.sh  upload.sh.in.bak
cmake/: Metadata.cmake.bak  PluginConfigure.cmake  PluginInstall.cmake  PluginLibs.cmake  PluginLocalization.cmake  PluginPackage.cmake  PluginSetup.cmake  TemplateVersion  version.h.in  wxWTranslateCatalog.h.in
cmake/in-files/: NSIS.template.in  appveyor-upload.sh.in  circleci-upload.sh.in  org.opencpn.OpenCPN.Plugin.yaml.in  pkg_version.sh.in  plugin.xml.in  version.h.in  wxWTranslateCatalog.h.in
data/: icons.cpp  icons.h
flatpak/: org.opencpn.OpenCPN.Plugin.VDR.yaml  org.opencpn.OpenCPN.Plugin.vdr.yaml  org.opencpn.OpenCPN.Plugin.vdr.yaml.bak
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
manual/vdr/: antora.yml
manual/vdr/modules/ROOT/pages/: vdr.adoc
po/: POTFILES.in.test  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  nl.po  nl_NL.po  pl.po  (+18 more)
scripts/: local-build.rc
src/: icons.cpp  icons.cpp.bak  icons.h  icons.h.bak  vdr_pi.cpp  vdr_pi.cpp.bak  vdr_pi.h  version.h
src/wxJSON/: jsonreader.cpp  jsonwriter.cpp
